<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tomato Safety</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register_sp">RegisterSPActivity</string>
    <string name="title_activity_status">Protection Status</string>
    <string name="title_activity_recover_password">RecoverPasswordActivity</string>

    <string name="msg_guess_number">Guess the number</string>
    <string name="txt_proceed">Guess the number</string>
    <string name="msg_sms_declaration">*Your password will be sent to the \'super-hero\' number via SMS. Standard SMS charges may apply.</string>
    <string name="txt_first_number">First number</string>
    <string name="txt_second_number">Second number</string>
    <string name="txt_t_n_c">I have read the terms and conditions.</string>
    <string name="create_account">Create my account</string>
    <string name="txt_ur_name">Your Name</string>
    <string name="txt_pwd">Password\t</string>
    <string name="sign_in">Sign In</string>
    <string name="fyp">I FORGOT MY PASSWORD</string>
    <string name="tnc_details">
        By clicking on \"Create My account\" you are accepting the following terms and conditions:\n\n\n
1.	this software \"Tomato Safety\" comes with no warranty.\n\n
2.	do not try to manually recover your phone in case it is stolen, go to the local police with the intruder\'s details.\n\n
3.	there is no guarantee of your phone\’s retrieval in case it is stolen.\n\n
4.	SMS charges may apply by the misuse of app.\n\n
5.	this software is under development: there might be some bugs in it.\n\n
6.	any damage to your device(smartphone) is not our responsibility.\n\n

    </string>
    <string name="title_activity_terms_and_conditions">TermsAndConditions</string>

    <string name="txt_hn_query">What\'s this?</string>
    <string name="txt_hn_details">What\'s this?</string>
    <string name="txt_pin">What\'s my siren whistle blower PIN ?</string>
    <string name="title_activity_send_sms">SendSMS</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="txt_faq">FAQ</string>
    <string name="txt_aboutUs">About us</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/630097811</string>
    <string name="ac">Create an account</string>
    <string name="title_activity_credits">CreditsActivity</string>
    <string name="title_activity_shake">Shake</string>
    <string name="your_name">Your name</string>
    <!--<string name="create_my_account">Create my account</string>-->
    <string name="warn_username_short">Looks like your name too short !</string>
    <string name="warn_password_short">Choose a stronger password</string>
    <string name="invalid_number">Invalid phone number</string>
    <string name="warn_same_number">\"You need to enter two different phone numbers\"</string>
    <string name="switch_off_the_security">Switch off the Security</string>
    <string name="siren_whistle_pin">Siren Whistle PIN</string>
    <string name="change_password">Change Password</string>
    <string name="switching_to_a_new_sim">Switching to a new Sim ?</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="about_us">About Us</string>
    <string name="credits">Credits</string>
    <string name="let_s_proceed">Let\'s proceed</string>
    <string name="get_started">Get started</string>
    <string name="hero_number">Hero Number</string>
    <string name="app_error">Something didn\'t work right</string>
    <string name="what_s_your_name">What\'s your name ?</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="wrong_password">Password you entered is wrong</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="hero">Hero</string>
    <string name="help">Help</string>
    <string name="save">Save</string>
    <string name="phone_too_short">Phone number should have 10 digits</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="name_too_short">Your name seems to be too short</string>
    <string name="new_password_too_short">Length of password should be atleast 5</string>
    <string name="this_is_a_dummy">This is a dummy</string>
    <string name="create_my_account">Create my account</string>
    <string name="okay">Okay</string>
</resources>
