<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".deprecated.Register">

    <Button
        android:id="@+id/btn_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_hn_query"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:onClick="showHNDetails"
        android:layout_margin="2dp"
        android:layout_gravity="right" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10"
            android:ems="10"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:background="@drawable/custom_edittext"
            android:id="@+id/et_first_hero"
            android:hint="@string/txt_first_number" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:maxLength="10"
            android:inputType="number"
            android:ems="10"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:background="@drawable/custom_edittext"
            android:id="@+id/et_second_hero"

            android:hint="@string/txt_second_number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkbox" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_t_n_c"
                android:layout_margin="5dp"
                android:textSize="16sp"
                android:id="@+id/tncText" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_proceed"
            android:text="@string/create_account"
            android:theme="@style/GreenButton"
            android:layout_gravity="center_vertical|center_horizontal"
            android:visibility="visible" />


    </LinearLayout>


</LinearLayout>
